alignment correction

--- a/CSS/ChickSpot.css
+++ b/CSS/ChickSpot.css
@@ -2,15 +2,20 @@ body{
     padding: 0;
     margin: 0;
     border: 0;
+    font-family: sans-serif;
 }
 .nav-bar{
     background-color: #D0B8A8;
-    margin-top: -0.6%;
+    margin-top: -0.7%;
     margin-bottom: -0.7%;
     padding-top: 1%;
+    height: 65px;
     padding-bottom: 0.5%;
     display: flex;
     align-items: center;
+}
+#logo{
+    margin-left: 30%;
 }
 .nav-bar a{
     color: black;
@@ -22,33 +27,39 @@ body{
     background-color: #DFD3C3;
     color: black;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     font-family: sans-serif;
-    width: 102%;
+    width: 103%;
+    margin-left: -2%;
     margin-top: -0.2%;
-    margin-left: -1.2%;
     margin-bottom: -0.2%;
+    padding: 10px 15px;
+    height: 75px;
 }
 #orderbutton p{
-    width: 30%;
+    width: 100%;
     margin-top: 1%;
     color: black;
+    text-align: center;
 }
 #orderbutton button{
-       margin-left: 3%;
-       margin-top: 1%;
-       margin-bottom: 0.7%;
-       border-radius: 20px;
-       font-family: sans-serif;
+    margin: 10px auto;
+    margin-left: -30%;
+    border-radius: 20px;
+    font-family: sans-serif;
 }
 #navicons {
-     width: 10%;
-     display: flex;
-     justify-content: space-around;
+    display: flex;
+    justify-content: space-around;
+    margin-left: auto;
+    padding-right: 10px;
+    gap: 15px;
 }
 #container-3 img{
-      border-radius: 15px;
+    border-radius: 15px;
+    max-width: 100%;
+    height: auto;
 }
 #container-3{
     background-color: #F8EDE3;
@@ -56,6 +67,7 @@ body{
 .incredians-1{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .buttonopt{
     border-radius: 15px;
@@ -64,13 +76,14 @@ body{
     color: white;
     margin-left: 2%;
     font-family: sans-serif;
-    height: 8%;
-    font-size: x-large;
+    padding: 8px 15px;
+    font-size: 18px;
 }
 #foodheading{
-    width: 80%;
-    margin-top: -1.1%;
-    margin-left: 10%;
+    width: 100%;
+    margin: 20px auto;
+    padding: 0 15px;
+    text-align: center;
 }
 #incredians{
     margin-left: 3%;
@@ -90,9 +103,10 @@ body{
     height: 100px;
     border-radius: 50px;
     object-fit: cover;
+    max-width: 100%;
 }
 
- .container-4 p {
+.container-4 p {
     font-size: 16px;
     font-weight: bold;
 }
@@ -100,8 +114,10 @@ body{
     display: flex;
     justify-content: center;
     font-family: sans-serif;
-    width: 99.5%;
+    width: 100%;
     background-color: #CBDCEB;
+    text-align: center;
+    padding: 10px 5px;
 }
 .allreceipes{
     font-size: x-large;
@@ -113,144 +129,103 @@ body{
     font-size: xx-large;
     font-family: sans-serif;
 }
-#soups{
-    font-size: larger;
-    padding-left: 10%;
+#receipehead {
+    font-size: 24px;
+    height: auto;
+    margin: 15px 0;
+}
+#c5img, #c7img {
+    max-width: 100%;
+    height: auto;
+    margin: 0 auto;
+    display: block;
+}
+.container-5 h5, .container-5 h2, .container-5 h6 {
+    margin-top: 15px;
     font-family: sans-serif;
-}
-#sanwitches{
-    font-size: larger;
-    border-bottom: -10%;
-    font-family: sans-serif;
-}
-#salads{
-    font-size: larger;
-    padding-left: 13%;
-    font-family: sans-serif;
-}
-#baked{
-    font-size: larger;
-    padding-left: 13%;
-    font-family: sans-serif;
-}
-#pizza{
-    font-size: larger;
-    padding-left: 12%;
-    font-family: sans-serif;
-}
-#tacos{
-    font-size: larger;
-    padding-left: 14%;
-    font-family: sans-serif;
-}
-.container-4{
-    background-color: #DFD3C3;
-    color: black;
-    margin-top: 0.2%;
-}
-.receipeimg img{
-    border-radius: 50%;
-   }
-#receipehead{
-    font-size: x-large;
-    height: 40px;
-   }
-#c5img{
-    margin-left: 38%;
-}
-.container-5 h5,h2,h6,button{
-    margin-top: 6%;
-    margin-right: 38%;
-    border-right: 20%;
-    font-family: sans-serif;
+    text-align: center;
 }
 .container-5 h2{
-    font-size: xx-large;
+    font-size: 28px;
 }
 .container-5 h6{
-    width: 59%;
-    margin-left: -1%;
+    width: 100%;
+    margin: 15px auto;
 }
 .container-5 button{
-    width: 28%;
-    height: 14%;
-    margin-top: 1%;
+    margin: 15px auto;
+    display: block;
     border-radius: 50px;
     border-color: #E2E2B6;
     background-color: #D0B8A8;
     color: black;
     font-size: large;
-    margin-right: 42%;
+    padding: 8px 20px;
 }
 .container-5{
     background-color: #8D493A;
     margin-top: 0.2%;
     color: #CBDCEB;
+    padding: 20px 0;
 }
 #popularreceipes{
     width: 100%;
-    font-size: xx-large;
+    font-size: 28px;
     font-family: sans-serif;
-    padding-left: 3%;
-    display: flex;
+    text-align: center;
+    margin: 20px 0;
 }
 .container-6{
     background-color: #DFD3C3;
     padding-top: 2%;
-
 }
 .container-6 img{
     border-radius: 10%;
-    padding-left: 10%;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
 }
 #dishname{
     font-size: large;
-    width: 96%;
+    width: 100%;
     display: flex;
     justify-content: center;
     font-family: sans-serif;
+    margin: 10px 0 20px 0;
 }
 .container-7{
     background-color: #8D493A;
     margin-top: 0.2%;
     color: #CBDCEB;
-    display: flex;
-    justify-content: center;   
+    padding: 20px 0;
 }
-.container-7 h5,h1,h6,button{
-    margin-top: 6%;
-    margin-left: 38%;
-    border-left: 20%;
+.container-7 h5, .container-7 h1, .container-7 h6 {
     font-family: sans-serif;
+    text-align: center;
+    margin: 15px auto;
 }
 .container-7 h1{
-    font-size: xx-large;
-    width: 70%;
-    
-}
-#c7img{
-    margin-left: 18%;
+    font-size: 28px;
+    width: 100%;
 }
 .container-7 h6{
     font-size: large;
-    width: 70%;
+    width: 100%;
 }
 .container-7 button{
-    width: 60%;
-    height: 14%;
-    margin-top: 5%;
-    border-radius:30%;
+    margin: 15px auto;
+    display: block;
+    padding: 8px 20px;
+    border-radius: 30px;
     border-color: #CBDCEB;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: #D0B8A8;
     color: black;
-    margin-left: 40%;
-    font-size: x-large;
+    font-size: large;
 }
 .footers{
     background-color: #DFD3C3;
+    padding: 20px 0;
 }
 .footer{
     display: flex;
@@ -258,7 +233,7 @@ body{
     justify-content: space-evenly;
     background-color: #DFD3C3;
     padding-top: 1%;
-    max-width: 250cap
+    flex-wrap: wrap;
 }
 .footer-content h6{ 
     width: 100%;
@@ -268,4 +243,66 @@ body{
 .footer-img{
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+/* Media queries for better responsiveness */
+@media (max-width: 768px) {
+    #orderbutton {
+        flex-direction: column;
+    }
+    
+    #orderbutton p {
+        width: 100%;
+        text-align: center;
+    }
+    
+    .buttonopt {
+        width: 90%;
+        font-size: 16px;
+        margin: 10px auto;
+    }
+    
+    #foodheading {
+        font-size: 20px;
+    }
+    
+    #popularreceipes {
+        font-size: 24px;
+    }
+    
+    .container-6 img {
+        padding-left: 0;
+    }
+}
+
+@media (max-width: 576px) {
+    #navicons {
+        width: auto;
+        margin-right: 40px;
+    }
+    
+    #foodheading {
+        font-size: 18px;
+    }
+    
+    .buttonopt {
+        font-size: 14px;
+    }
+    
+    .container-5 h2, .container-7 h1 {
+        font-size: 22px;
+    }
+    
+    .container-5 h6, .container-7 h6 {
+        font-size: 14px;
+    }
+    
+    #popularreceipes {
+        font-size: 20px;
+    }
+    
+    #dishname {
+        font-size: 14px;
+    }
 }
